# rust-apl

./: .gitignore  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js  test
.github/workflows/: ci.yml
apl_type/: index.html
err/: struct.AplError.html
implementors/lazy_static/: trait.LazyStatic.js
interpreter/: struct.Interpreter.html
primitives/: sidebar-items.js
primitives/dyadic/: sidebar-items.js
primitives/monadic/: fn.shape.html
rust_apl/: all.html  index.html  sidebar-items.js
rust_apl/apl_type/: enum.AplType.html  enum.Scalar.html  fn.all_scalar.html  fn.extract_f64.html  fn.extract_scalar.html  fn.one_enclose.html  index.html  sidebar-items.js  struct.AplArray.html  struct.AplEnclose.html
rust_apl/environment/: index.html  sidebar-items.js  struct.Environment.html
rust_apl/err/: index.html  sidebar-items.js  struct.AplError.html  struct.AplErrors.html  struct.ErrCtx.html
rust_apl/expr/: enum.Expr.html  index.html
rust_apl/interpreter/: index.html  struct.Interpreter.html
rust_apl/parser/: index.html  sidebar-items.js  static.DYADIC_ONLY.html  struct.Parser.html
rust_apl/primitives/: index.html
rust_apl/run/: fn.eval.html  fn.run.html  index.html  sidebar-items.js
rust_apl/scanner/: index.html  sidebar-items.js  struct.Scanner.html
rust_apl/token/: index.html  (+4 more)
scanner/: struct.Scanner.html
src/: apl_type.rs  environment.rs  err.rs  expr.rs  interpreter.rs  lib.rs  main.rs  parser.rs  run.rs  scanner.rs  token.rs  token_type.rs
tests/: primitives.rs
token/: sidebar-items.js
(+45 files in other folders)
