[package]
name = "rust-apl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
ndarray = "0.15.0"
rustyline = "9.1.0"
lazy_static = "1.4.0"
codespan-reporting = "0.11.1"
term = "0.7.0"
